--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-677.4KB/s(Youtube:不良林), server: gz-cm.wespanl.club, port: 33074, type: vmess, uuid: 4f55901a-626f-3df4-be38-dfa35785355d, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: gz-cm.wespanl.club}}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇫🇷 法国-429.9KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林), server: 213.183.53.207, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇨🇳 中国-898.5KB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇳🇱 荷兰-670.7KB/s(Youtube:不良林), server: 37.120.192.158, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 波兰-1.04MB/s(Youtube:不良林), server: 217.30.10.68, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 波兰-951.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-255.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-848.7KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-310.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-244.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-314.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-291.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-211.1KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-677.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇫🇷 法国-429.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-898.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-670.7KB/s(Youtube:不良林)
-      - 波兰-1.04MB/s(Youtube:不良林)
-      - 波兰-951.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
+      - 捷克-848.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
