--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-255.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 捷克-848.7KB/s(Youtube:不良林), server: v2cross.com.02.v2ce.com, port: 443, type: trojan, password: 3gLlCYBipVwr6Y5F, sni: v2cross.com.02.v2ce.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林), server: v1.tgfaka.com, port: 48443, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.tgfaka.com}}
+  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇳 中国-2.29MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-310.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-244.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-314.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-209.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-291.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-211.1KB/s(Youtube:不良林), server: v6.heduian.online, port: 30866, type: vmess, uuid: cbb3f877-d1fb-344c-87a9-d153bffd5484, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /oooo, ws-headers: {Host: v6.heduian.online}}
+  - {name: 🇨🇦 加拿大-616.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-255.5KB/s(Youtube:不良林)
-      - 捷克-848.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-310.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-244.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-314.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-209.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-291.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-211.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-616.5KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-768.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
